--- a/site/index.html
+++ b/site/index.html
@@ -8,5 +8,15 @@
 </head>
 <body>
     <h1>Hello</h1>
+    <p>Some text </p>
+    <p>More text</p>
+    ca  marche <span> super </span>
+    <footer>
+        <hr>
+        <p
+        style="text-align: center"
+          onclick="alert('nope')"
+        >Tech support: none</p>
+    </footer>
 </body>
 </html>
